# cuitonline

./: .gitignore  LICENSE  README.md  cuitonline.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
demo/: make.sh  usage.cast  usage.tutorial
tests/: conftest.py  test_integration.py  test_unit.py
tests/cassettes/test_integration/: test_busqueda_paginacion.yaml  test_search_con_filtro_juridica.yaml  test_search_devuelve_personas.yaml  test_search_persona_tiene_campos_basicos.yaml  test_search_por_cuit.yaml
