[project]
name = "cuitonline"
readme = "README.md"
authors = [
    { name = "Martín Gaitán", email = "gaitan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
	"beautifulsoup4>=4.12",
	"pydantic>=2.10",
	"requests",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
nombres = ["nameparser>=1.1"]

[project.urls]
Home = "https://github.com/mgaitan/cuitonline"

[project.scripts]
cuitonline = "cuitonline:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--record-mode=none --block-network"

[dependency-groups]
dev = [
    "cuitonline[nombres]",
    "pytest>=9.0",
    "pytest-recording>=0.13",
    "ruff>=0.9.2",
]
